# fast

./: README.md  elastic.py  pyproject.toml  requirements.txt
fast/: elastic.py
utils/: env.py
