[project]
name = "fast"
version = "1.0.1"
description = ""
authors = [{ name = "Mohammad Ghazanfari", email = "mgh.5225@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["python-dotenv>=1.2.1", "elasticsearch>=9.2.1"]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast", "fast.*"]
